# ear6

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  nes-issue.md  nes-issue.txt
.github/workflows/: build-web.yaml
app/cli/: CMakeLists.txt  main.cpp
app/desktop/: CMakeLists.txt  emulator_widget.cpp  emulator_widget.h  main.cpp  main_window.cpp  main_window.h
app/web/: CMakeLists.txt  main.cpp
app/web-ui/: .gitignore  index.html  package-lock.json  package.json
app/web-ui/src/: App.css  App.tsx  ControlBar.css  ControlBar.tsx  CrtScreen.css  CrtScreen.tsx  EmulatorCanvas.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  TitleBar.css  TitleBar.tsx  types.ts
assets/nes/: nes_db.txt
cmake/: Ear6Config.cmake.in  embed_nes_db.cmake
docs/: TODO.md  debug_ppu_rendering.md  debug_vs_dr_mario.md  mapper_checklist.md  migration_guide.md  web_ui_design.md
include/ear6/: ear6.h  flash.h  nes.h  version.h.in
roms/1/: A Ressha De Ikou (J).ppm  BIONIC_C.ppm  Final Fantasy 2 (J).ppm  ╧г╠╪└╒╕┤╗ю.ppm
scripts/: bump_version.sh  compare_screenshots.py  screenshot.sh
src/: blip_buf.c  blip_buf.h  ear6.cpp  system.h  system_test.cpp  system_test.h
src/nes/: apu_envelope.h  apu_frame_counter.cpp  apu_frame_counter.h  apu_length_counter.cpp  apu_length_counter.h  apu_timer.h  base_mapper.cpp  base_mapper.h  datach_barcode_reader.h  delta_modulation_channel.cpp  delta_modulation_channel.h  eeprom_24c0x.h  ines_loader.cpp  ines_loader.h  ines_memory_handler.h  mapper_000.cpp  mapper_000.h  mapper_001.cpp  mapper_001.h  mapper_002.cpp  mapper_002.h  mapper_003.cpp  mapper_003.h  mapper_004.cpp  mapper_004.h  mapper_005.cpp  mapper_005.h  mapper_006.cpp  mapper_006.h  mapper_007.cpp  mapper_007.h  mapper_009.cpp  mapper_009.h  mapper_011.cpp  mapper_011.h  mapper_013.cpp  mapper_013.h  mapper_015.cpp  mapper_015.h  mapper_016.cpp  (+28 more)
tests/: test_ear6.cpp
